--- a/style.css
+++ b/style.css
@@ -157,17 +157,21 @@ p {
  outline-style: dashed;
 }
 
-.birthdayCard:hover {
- transform: perspective(2500px) rotate(5deg);
- box-shadow: inset 100px 20px 100px rgba(0, 0, 0, .2), 0 10px 100px rgba(0, 0, 0, 0.5);
-}
-
-.birthdayCard:hover .cardFront {
- transform: rotateY(-160deg);
-}
-
-.birthdayCard:hover .happy {
- visibility: hidden;
+@media (hover: none) {
+    
+    .birthdayCard:hover {
+        transform: perspective(2500px) rotate(5deg);
+        box-shadow: inset 100px 20px 100px rgba(0, 0, 0, .2), 0 10px 100px rgba(0, 0, 0, 0.5);
+       }
+       
+       .birthdayCard:hover .cardFront {
+        transform: rotateY(-160deg);
+       }
+       
+       .birthdayCard:hover .happy {
+        visibility: hidden;
+       }
+    
 }
 
 @keyframes blink {
